--- a/MemoryMosaic/Styles/Components/Modal/Dropdown.scss
+++ b/MemoryMosaic/Styles/Components/Modal/Dropdown.scss
@@ -1,7 +1,7 @@
 .dropdown {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     background-color: black;
     border: 1px solid white;
     z-index: 99999;
