--- a/MemoryMosaic/Pages/LibraryContent/Home.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Home.razor
@@ -2,4 +2,4 @@
 
 <title>Home - MemoryMosaic</title>
 
-<LibraryContentViewer NoItemsText="Import some items to get started" Where="date_taken IS NOT NULL"/>
+<LibraryContentViewer NoItemsText="Import some items to get started" Where="date_taken IS NOT NULL AND separate = False"/>
