--- a/MemoryMosaic/Pages/LibraryContent/Memories.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Memories.razor
@@ -1,7 +1,7 @@
 @page "/memories"
 
 <title>Memories - MM</title>
-<link href="css/Pages/Memories.css" rel="stylesheet"/>
+<link href="css/Pages/LCV/Memories.css" rel="stylesheet"/>
 
 <div id="date-picker">
 	<span>Memories From</span>
