Remove Ctrl D shortcut

--- a/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
@@ -140,7 +140,7 @@
 
 @if (Visibility.Visible)
 {
-	<KeyboardShortcuts AltS="@UpdateStarred" AltLeft="@Disable" CtrlD="@DeleteButtonClick" Del="@DeleteButtonClick" CtrlLeft="@MoveLeft" CtrlRight="@MoveRight" Esc="@Disable" I="@infoVisibility.Toggle" Left="@TryMoveLeft" Right="@TryMoveRight"/>
+	<KeyboardShortcuts AltS="@UpdateStarred" AltLeft="@Disable" Del="@DeleteButtonClick" CtrlLeft="@MoveLeft" CtrlRight="@MoveRight" Esc="@Disable" I="@infoVisibility.Toggle" Left="@TryMoveLeft" Right="@TryMoveRight"/>
 }
 
 @code {
