--- a/MemoryMosaic/Styles/Components/Modal/ShortcutsReference.scss
+++ b/MemoryMosaic/Styles/Components/Modal/ShortcutsReference.scss
@@ -1,37 +1,25 @@
-#reference {
-	width: 400px;
-	height: 400px;
+@import "../../Shared";
+
+#shortcutsReference {
+	@include flex-col;
+	min-width: 300px;
+	min-height: 300px;
 	border: 2px solid white;
+	padding: 8px;
+	gap: 12px;
 
-	> #header {
-		position: fixed;
-		width: 100%;
-		height: 65px;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-
-		> span { font-size: 20px; }
+	> span {
+		text-align: center;
+		font-size: 20px;
+		margin-bottom: 4px;
 	}
 
-	> #allShortcuts {
-		position: absolute;
-		left: 28px;
-		top: 65px;
-		display: flex;
-		flex-direction: column;
+	> div {
+		@include flex-row;
 
-		> div {
-			margin-bottom: 12px;
-
-			> code {
-				display: inline-block;
-				text-align: center;
-				background-color: rgba(211, 211, 211, 0.2);
-				width: 50px;
-			}
-
-			> span { margin-left: 10px; }
+		> code {
+			width: 80px;
+			margin-right: 12px;
 		}
 	}
 }
