Add click actions to ShortcutsReference

--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -151,7 +151,10 @@ Items can be selected, and depending on the page, different options may be appli
 		{"Ctrl Shift A", "Load and Select Everything"},
 		{"Ctrl Shift -", "Zoom Grouping Out"},
 		{"Ctrl Shift +", "Zoom Grouping In"},
-		{"/", "Search"}
+		{"/", "Search"},
+		{"Ctrl Click", "Always Select Item"},
+		{"Alt Click", "Always Fullscreen Item"},
+		{"Shift Click", "Select Range of Items"}
 	};
 }
 
