--- a/MemoryMosaic/Styles/Components/LibraryContentViewer/Thumbnail.scss
+++ b/MemoryMosaic/Styles/Components/LibraryContentViewer/Thumbnail.scss
@@ -5,13 +5,19 @@
 	> .star-icon {
 		position: absolute;
 		bottom: 8px;
-		left: 8px;
+		right: 8px;
 	}
 
 	> .video-icon {
 		position: absolute;
 		top: 8px;
 		right: 8px;
+	}
+	
+	> .description-icon {
+		position: absolute;
+		bottom: 8px;
+		left: 8px;
 	}
 
 	> .checkbox {
