--- a/MemoryMosaic/Pages/_Host.cshtml
+++ b/MemoryMosaic/Pages/_Host.cshtml
@@ -32,7 +32,7 @@
     <link href="css/Components/Buttons/IconTextButton.css" rel="stylesheet"/>
 </head>
 
-<body style="background-color: black; margin-right: 0; margin-left: 10px; margin-top: 0;">
+<body style="background-color: black; margin-right: 0; margin-left: 10px; margin-top: 0">
     <component type="typeof(App)" render-mode="Server"/> @*Whatever this line is/does, removing it causes the app to not work... 🤔*@
     <script src="_framework/blazor.server.js"></script> @*This stupid line is needed for some reason*@
     <div id="components-reconnect-modal"></div> @*https://stackoverflow.com/a/59395390*@
