--- a/MemoryMosaic/Shared/Import/LibraryItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/LibraryItemDisplay.razor
@@ -3,7 +3,7 @@
 
 @* <div class="libraryItem"> *@
 	@* <MaterialIcon Icon="check_circle" Class="checkbox unchecked"/> *@
-	@* <img src="data:image/jpg;base64,@LibraryItem.thumbnail" onclick="window.open('mm_library/@LibraryItem.path', '_blank').focus();" alt="" loading="lazy"/> *@
+	@* <img src="data:image/jpg;base64,@LibraryItem.thumbnail" onclick="window.open('mm_library/@LibraryItem.path', '_blank').focus()" alt="" loading="lazy"/> *@
 	@* <span class="shortPath @(Import.pathWidthClass == "shortWidth" ? "shortWidth" : "fullWidth")">@("Library/" + LibraryItem.path)</span> *@
 	@* <span class="dateTaken">@(LibraryItem.dateTaken == null ? "No Date Taken" : LibraryItem.dateTaken)</span> *@
 	@* <span class="inTrash">@(LibraryItem.dateDeleted != null ? "In Trash" : "")</span> *@
